--- a/sass/2-layouts/_theater.sass
+++ b/sass/2-layouts/_theater.sass
@@ -30,3 +30,38 @@
 			a
 				&:hover
 					border-bottom: none
+
+	ul.interviews
+		margin-top: 2rem
+
+	ul.chi-reader span
+		font-size: 1.5rem
+		font-weight: normal
+
+	ul.interviews .selected
+		font-size: 0.9rem
+		font-weight: normal
+
+	ul.interviews .theater-beat
+		font-weight: normal
+
+	ul .tribune 
+		font-size: 1.5rem
+		font-weight: normal
+
+	ul .time-out
+		font-size: 1.5rem
+		font-weight: normal
+
+	ul .small
+		font-size: 0.9rem
+		font-weight: normal
+	
+	ul.interviews .performer
+		font-weight: normal
+		font-size: 0.9rem
+
+	.podcasts
+		font-size: 1.5rem
+		font-weight: normal
+		letter-spacing: 1px
