--- a/sass/2-layouts/_header.sass
+++ b/sass/2-layouts/_header.sass
@@ -12,14 +12,14 @@
 		position: fixed
 		text-align: center
 		top: 0
-		background: linear-gradient(to top left, #8D6D96, #B98CAE)
-		height: 126px
+		// background: linear-gradient(to top left, #8D6D96, #B98CAE)
+		background: $secondary
+		height: 96px
 		width: 100%
 		color: white
 
-
 .cbp-scroll-header.header-shrink
-	height: 76px
+	height: 66px
 
 .title
 	display: $hybrid
@@ -28,7 +28,7 @@
 	text-align: center
 	+grid-media($S)
 		float: left
-		+margin(1.5rem null null 5.5rem)
+		+margin(1rem null null 2.5rem)
 		
 .type
 	+size(auto 2rem)
@@ -38,7 +38,7 @@
 	+size(auto auto)
 	+grid-media($S)
 		float: left
-		+margin(2.1rem null null 1.5rem)
+		+margin(1.7rem null null 1.5rem)
 
 
 
