--- a/sass/2-layouts/_menu.sass
+++ b/sass/2-layouts/_menu.sass
@@ -8,25 +8,24 @@
 		+grid-media($S)
 			+position(static, null null null null)
 			background: none
-			+margin(2rem 3rem null null)
+			+margin(1.5rem 3rem null null)
 			float: right
 			+size(auto auto)
 	li
 		display: inline-block
 	a
 		font-family: $varela
-		font-size: .5rem
-		letter-spacing: .1rem
+		font-size: 0.5rem
+		letter-spacing: 0.1rem
 		color: white
 		+margin(0.4rem 0.4rem)
 		float: left
 		+grid-media($S)
-			+margin(0 1rem)
-			font-size: 1rem
+			+margin(0.3rem 0.5rem 0)
+			font-size: 0.7rem
 			&:hover
 				transition: all 0.3s
-				color: $tertiary
-		+grid-media($S)
-			+margin(null 0.5rem)
+				color: #FEE2FF
 		+grid-media($M)
-			+margin(null 1rem)
+			+margin(0 0.8rem)
+			font-size: 1rem	
