--- a/sass/2-layouts/_theater.sass
+++ b/sass/2-layouts/_theater.sass
@@ -2,34 +2,28 @@
 	background: url(../images/large-wave.png) no-repeat center bottom
 	background-size: 100%
 	@extend #tv
-	.chi-reader
-		.comic-item
-			
-			+grid-media($S)
-				+grid-column(3)
-			+grid-media($M)
-				+grid-column(3.5)
 	
 	.chi-reader + ul
 		.comic-item
 			+grid-media($M)
-				a
-					display: $hybrid
-					max-width: 250px
+				+grid-column(5)
 	
+	ul.chi-reader
+		.comic-item
+			+grid-media($M)
+				+grid-column(5)
+
+	ul
+		.comic-item
+			+grid-media($M)
+				+grid-column(5)
+
+
+
 	.small
 		font-size: 1.5rem
 	
-	ul
-		+padding(null)
-		.comic-item
-			+grid-media($S)
-				+grid-column(4)
-			+grid-media($M)
-				+grid-column(5.5)
-			a
-				&:hover
-					border-bottom: none
+	
 
 	ul.interviews
 		margin-top: 2rem
