--- a/sass/2-layouts/_tv.sass
+++ b/sass/2-layouts/_tv.sass
@@ -84,6 +84,8 @@
 			a 
 				display: inline-block
 				color: $primary
+				border-bottom: 1px solid transparent
+				transition: all 0.25s
 				&:hover
 					border-bottom: 1px solid $primary
 					transition: none
