--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,5 +1,6 @@
 ///////////  F O N T S  ///////////////
 @import url('https://fonts.googleapis.com/css?family=Rubik|Varela+Round')
+@import url('https://fonts.googleapis.com/css?family=Caveat+Brush')
 ///////////  F O N T S  ///////////////
 $caveat-brush: 'Caveat Brush', sans-serif
 $varela: 'Varela Round', sans-serif
